--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,11 @@
 {
     "this_is_home_pages": "this is home pages",
     "search_product": "search product ...",
-    "Cart": "cart"
+    "Cart": "Cart",
+    "Blog": "Blog",
+    "Contact": "Contact",
+    "All Categories": "All Categories",
+    "Products": "Products",
+    "Best Seller": "Best Seller",
+    "New Arrival": "New Arrival"
 }
