--- a/public/locales/bd/translation.json
+++ b/public/locales/bd/translation.json
@@ -3,5 +3,11 @@
     "search_product": "পণ্য অনুসন্ধান করুন .....",
     "Cart": "কার্ট",
     "User": "ব্যবহারকারী",
-    "Account": "হিসাব"
+    "Account": "হিসাব",
+    "Blog": "ব্লগ",
+    "Contact": "যোগাযোগ",
+    "All Categories": "সমস্ত বিভাগ",
+    "Products": "পণ্য",
+    "Best Seller": "সেরা বিক্রেতা",
+    "New Arrival": "নতুন আগমন"
 }
