--- a/public/locales/bd/translation.json
+++ b/public/locales/bd/translation.json
@@ -9,5 +9,7 @@
     "All Categories": "সমস্ত বিভাগ",
     "Products": "পণ্য",
     "Best Seller": "সেরা বিক্রেতা",
-    "New Arrival": "নতুন আগমন"
+    "New Arrival": "নতুন আগমন",
+    "Featured Products": "বৈশিষ্ট্যযুক্ত পণ্য",
+    "View All": "সব দেখুন"
 }
