--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,7 @@
     "All Categories": "All Categories",
     "Products": "Products",
     "Best Seller": "Best Seller",
-    "New Arrival": "New Arrival"
+    "New Arrival": "New Arrival",
+    "Featured Products": "Featured Products",
+    "View All": "View All"
 }
