--- a/public/locales/bd/translation.json
+++ b/public/locales/bd/translation.json
@@ -11,5 +11,7 @@
     "Best Seller": "সেরা বিক্রেতা",
     "New Arrival": "নতুন আগমন",
     "Featured Products": "বৈশিষ্ট্যযুক্ত পণ্য",
-    "View All": "সব দেখুন"
+    "View All": "সব দেখুন",
+    "New Products": "নতুন পণ্য",
+    "Sort by": "অনুসারে সাজান"
 }
