--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,7 @@
     "Best Seller": "Best Seller",
     "New Arrival": "New Arrival",
     "Featured Products": "Featured Products",
-    "View All": "View All"
+    "View All": "View All",
+    "New Products": "New Products",
+    "Sort by": "Sort by"
 }
