--- a/public/locales/bd/translation.json
+++ b/public/locales/bd/translation.json
@@ -13,5 +13,6 @@
     "Featured Products": "বৈশিষ্ট্যযুক্ত পণ্য",
     "View All": "সব দেখুন",
     "New Products": "নতুন পণ্য",
-    "Sort by": "অনুসারে সাজান"
+    "Sort by": "অনুসারে সাজান",
+    "Load More": "আরো লোড"
 }
