--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,6 @@
     "Featured Products": "Featured Products",
     "View All": "View All",
     "New Products": "New Products",
-    "Sort by": "Sort by"
+    "Sort by": "Sort by",
+    "Load More": "Load More"
 }
